언어 통일 (영어)

--- a/views/ft_leave1.ejs
+++ b/views/ft_leave1.ejs
@@ -26,8 +26,8 @@
         <div id="z">
         </div>
         <div id="div_login">
-       <p id="first_join" ><a href = "/first_test/logout"style="text-decoration:none;">로그아웃</a></p>
-       <p id="mypage_mention"><a href = "/first_test/mypage"style="text-decoration:none;">mypage</a></p>
+       <p id="first_join" ><a href = "/first_test/logout"style="text-decoration:none;">LOGOUT</a></p>
+       <p id="mypage_mention"><a href = "/first_test/mypage"style="text-decoration:none;">MYPAGE</a></p>
        <img id="MailBoxbtn" src="/images/자산 3.png"></img>
 
                <div class = "modal" id= "MailBoxModal" style="display:none;" >
