--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -34,7 +34,7 @@
           <% if(!session) { %>
           <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">LOGIN</a></p>
           <% } else  {%>
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">LOGOUT</a></p>
           <%
             if(mailflag.length == 0){
               %>
@@ -60,7 +60,7 @@
             }
           }
           %>
-           <p class="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;" class="mypage_mention">mypage</a></p>
+           <p class="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;" class="mypage_mention">MYPAGE</a></p>
           <% } %>
 
               <div class = "modal" id= "MailBoxModal" style="display:none;" >
