--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -19,7 +19,7 @@
         <div id="z">
         </div>
         <div id="div_login">
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">LOGOUT</a></p>
           <%
           if(mailflag.length == 0){
             %>
