--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -379,7 +379,7 @@
             <div class = "modal-content" >
               <span class="close">&times;</span>
               <ul id="myUL">
-              <li><a href="/logout">로그아웃</a></li>
+              <li><a href="/logout">LOGOUT</a></li>
               <li><a href="/memberleave">회원탈퇴></a><li>
               <li><a href="#">취소</a><li>
             </ul>
