--- a/views/ft_board.ejs
+++ b/views/ft_board.ejs
@@ -47,7 +47,7 @@
      <% if(!session) { %>
      <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
      <% } else  {%>
-     <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
+     <p id="first_join"><a href = "/first_test/logout">LOGOUT</a></p>
      <% } %>
      <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
 
