--- a/views/ft_join3.ejs
+++ b/views/ft_join3.ejs
@@ -21,10 +21,10 @@
         </div>
         <div id="div_login">
           <% if(!session) { %>
-          <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
+          <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">LOGIN</a></p>
           <% } else  {%>
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
-          <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">LOGOUT</a></p>
+          <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">MYPAGE</a></p>
           <% } %>
                   <div class = "modal" id= "MailBoxModal" style="display:none;" >
                   <div class = "modal-dialog">
