--- a/views/ft_leave2.ejs
+++ b/views/ft_leave2.ejs
@@ -20,11 +20,11 @@
       <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
       <p id="first_FAQ">FAQ</p>
       <% if(!session) { %>
-      <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
+      <p id="first_join"><a href = "/first_test/join1">JOIN</a></p><p id="first_login"><a href = "/first_test/login">LOGIN</a></p>
       <% } else  {%>
-      <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
+      <p id="first_join"><a href = "/first_test/logout">LOGOUT</a></p>
       <% } %>
-      <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
+      <p id="mypage_mention"><a href = "/first_test/mypage">MYPAGE</a></p>
 
               <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
                       메일함
