--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -14,7 +14,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-            <img src="/images/로고.png" id="logo"></img>
+              <img src="/images/로고b.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
