수신자->받은사람,발신자->보낸사람으로 변경

--- a/views/ft_exchange_request_mail.ejs
+++ b/views/ft_exchange_request_mail.ejs
@@ -4,7 +4,7 @@
   </button>
   <!-- <h4 class = "modal-title" id = "ExchangeRequestLabel"> 교환신청 </h4> -->
   <p id ="recipientname_request">
-      수신자 : <%=rows[0].writer%><br>
+      보낸사람 : <%=rows[0].writer%><br>
     </p>
     <p id ="phone_request">
       번호공개여부 :
