--- a/views/ft_mailbox.ejs
+++ b/views/ft_mailbox.ejs
@@ -14,7 +14,7 @@
     <table id = "RecvMailBoxTable" class="mailtable">
       <thead>
       <tr>
-        <td> 발신자 </td>
+        <td> 보낸사람 </td>
         <td> 내용 </td>
         <td> 날짜 </td>
         <td> 삭제 </td>
@@ -91,7 +91,7 @@
     <table id = "SendMailBoxTable" class="mailtable">
       <thead>
       <tr>
-        <td> 수신자 </td>
+        <td> 보낸사람 </td>
         <td> 내용 </td>
         <td> 날짜 </td>
         <td> 삭제 </td>
