--- a/views/ft_recvmailbox.ejs
+++ b/views/ft_recvmailbox.ejs
@@ -8,7 +8,7 @@
   <div class= "modal-body">
   <table id = "RecvMailBoxTable">
     <tr>
-      <th> 발신자 </th>
+      <th> 보낸사람 </th>
       <th> 쪽지내용 </th>
       <th> 보낸시각 </th>
       <th> 삭제 </th>
