--- a/views/ft_board_send_mail_modal.ejs
+++ b/views/ft_board_send_mail_modal.ejs
@@ -5,7 +5,7 @@
 <div class= "modal-body">
   <form>
     <div class = "form-group">
-       수신자 : <label id="recipientname" class="control-label"><%=rows[0].writer_name%></label>
+       받은사람 : <label id="recipientname" class="control-label"><%=rows[0].writer_name%></label>
     </div>
     <div class = "form-group">
       <label for="message-text" class="control-label"> 내용 : </label>
