--- a/views/ft_sendmailbox.ejs
+++ b/views/ft_sendmailbox.ejs
@@ -1,6 +1,5 @@
 
     <div class = "modal-header">
-      <<보낸메일함>>
       <button type = "button" class = "close" data-dismiss="modal" aria-label = "Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -9,7 +8,7 @@
     <div class= "modal-body">
       <table id = "SendMailBoxTable">
         <tr>
-          <th> 수신자 </th>
+          <th> 보낸사람 </th>
           <th> 내용 </th>
           <th> 날짜 </th>
           <th> 삭제 </th>
