--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -22,9 +22,7 @@
     <input type="button" value="다음" id="rectangle_8_2">
       <div id="first_area">
         <div id="div_logo">
-         <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
-        </div>
-        <div id="z">
+              <img src="/images/로고b.png" id="logo"></img>
         </div>
         <div id="div_login">
           <% if(!session) { %>
