--- a/views/ft_sendmailbox.ejs
+++ b/views/ft_sendmailbox.ejs
@@ -8,7 +8,7 @@
     <div class= "modal-body">
       <table id = "SendMailBoxTable">
         <tr>
-          <th> 보낸사람 </th>
+          <th> 받은사람 </th>
           <th> 내용 </th>
           <th> 날짜 </th>
           <th> 삭제 </th>
