--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,12 @@
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #00B7FF;
+}
+
 #wrapper
 {
   width : 1020px;
@@ -112,8 +121,9 @@ transition: width 1s;
 #MailBoxbtn
 {
   position : absolute;
+  float : right;
   margin-top: 10px;
-  margin-left: 80px;
+  margin-left: 70px;
   cursor: pointer;
 }
 #book_mark{
@@ -302,7 +312,7 @@ transition: width 1s;
 .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: 27px;
     border: 1px solid #888;
     width: 80%;
     height:80%;
@@ -365,7 +375,7 @@ div.tab button:hover {
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: #248FB0;
 }
 
 /* Style the tab content */
@@ -702,7 +712,18 @@ table.type08 td .ex_time{
   height:29px;
   z-index: 11;
 }
-
+#RecvBoxClosebtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  margin-left: 10px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
 #Okbtn{
   border-radius: 5px;
   font-size: 13px;
@@ -792,6 +813,17 @@ table.type08 td .ex_time{
   margin-left : 13px;
   z-index: 3;
 }
+.whoMention{
+  color: #074F65;
+}
+.frontMention{
+  margin-right: 8px;
+  color: black;
+}
+.backMention{
+  color: black;
+  margin-right: 8px;
+}
 #send_time{
   font-size: 15px;
   font-family: "NanumBarunGothic";
@@ -826,23 +858,26 @@ table.type08 td .ex_time{
 }
 .modal-mail-header{
   width :100%;
-  height : 110px;
+  height : 70px;
+  padding : 10px;
 }
 .modal-mail-body{
   width :100%;
-  height : 300px;
+  height : 270px;
+  padding : 10px 0;
 }
 .modal-mail-footer{
   width :100%;
-  height : 40px;
+  height : 30px;
 }
-.modal-reply-header{
+.modal-reply-header{R
   width :100%;
-  height : 80px;
+  height : 50px;
 }
 .modal-reply-body{
   width :100%;
-  height : 330px;
+  height: 310px;
+  margin-top: 20px;
 }
 .modal-reply-footer{
   width :100%;
@@ -851,11 +886,12 @@ table.type08 td .ex_time{
 
 .modal-send-header{
   width :100%;
-  height : 100px;
+  height : 80px;
 }
 .modal-send-body{
   width :100%;
-  height : 310px;
+  height : 290px;
+  margin-top: 14px;
 }
 .modal-send-footer{
   width :100%;
@@ -875,9 +911,9 @@ table.type08 td .ex_time{
   height : 60px;
 }
 #recipientname{
-  font-size: 17px;
+  font-size: 15px;
   font-family: "NanumBarunGothic";
-  color: rgb(90, 90, 90);
+  color: #074F65;
   font-weight: bold;
   line-height: 1.2;
   position: absolute;
@@ -886,7 +922,7 @@ table.type08 td .ex_time{
   z-index: 13;
 }
 #recipientname_2{
-  font-size: 17px;
+  font-size: 15px;
   font-family: "NanumBarunGothic";
   color: rgb(90, 90, 90);
   line-height: 1.2;
@@ -896,7 +932,7 @@ table.type08 td .ex_time{
   z-index: 13;
 }
 #when_send{
-  font-size: 17px;
+  font-size: 15px;
   font-family: "NanumBarunGothic";
   color: rgb(90, 90, 90);
   line-height: 1.2;
@@ -906,7 +942,7 @@ table.type08 td .ex_time{
   z-index: 13;
 }
 #read_flag{
-  font-size: 17px;
+  font-size: 15px;
   font-family: "NanumBarunGothic";
   color: rgb(90, 90, 90);
   line-height: 1.2;
@@ -1095,4 +1131,24 @@ table.type08 td .ex_time{
   position: absolute;
   margin-top : 13px;
   z-index: 13;
+}
+.divider {
+  height: 1px;
+  width:100%;
+  display:block; /* for use on default inline elements like span */
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+input[type=text] {
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
 }
