--- a/views/ft_contentViewModal.ejs
+++ b/views/ft_contentViewModal.ejs
@@ -2,13 +2,14 @@
   <div class = "modal-mail-header">
 
         <p id ="who_send">
-          <%=rows[0].send_name%> 님이 보낸 쪽지<br>
+        <span class="whoMention"><%=rows[0].send_name%></span> 님이 보낸 쪽지<br>
         </p>
         <p id ="send_time">
-         보낸 시간 : <%=rows[0].date_sent%><br>
+         <span class="frontMention">보낸 시간</span> <span class="backMention"><%=rows[0].date_sent%></span><br>
        </p>
        <p id = "who_number">
-         번호 : <%
+         <span class="frontMention">번호</span>
+         <%
           if(rows3[0].phoneopen == '비공개')
           {
           %>
@@ -23,18 +24,17 @@
        </p>
         <button type = "button" class = "close" data-dismiss="modal" aria-label = "Close">x</button>
       </div>
-
+      <div class="divider"></div>
       <div class= "modal-mail-body">
           <textarea row= "20" cols= "44" readonly class="recv_mail_textarea">
             <%=rows[0].content%>
           </textarea>
       </div>
+      <div class="divider"></div>
       <div class = "modal-mail-footer" >
-          <button type = "button" class = "mail_cancle_btn" data-dismiss="modal" id="Okbtn"> 취소</button>
+          <button type = "button" class = "mail_cancle_btn" data-dismiss="modal" id="Okbtn"> 닫기</button>
           <button type = "button" href = "/first_test/replymodal/<%=rows[0].id%>" id="Replybtn" data-toggle="modal" data-target="#ReplyModal<%=rows[0].id%>" class= "btn btn-primary"> 답장 </button>
       </div>
-
-
         <div class = "reply_modal" id= "ReplyModal<%=rows[0].id%>" tabindex="-1" data-focus-on="input:first">
           <div class = "modal-dialog">
             <div class = "modal-content" id="modal-reply-content">
