--- a/views/ft_exchange_request_mail.ejs
+++ b/views/ft_exchange_request_mail.ejs
@@ -24,7 +24,7 @@
 </div>
 <div class= "modal-request-body">
       <!-- <label for="message-text" class="control-label"> 자신이 가지고 있는 과목의 이름과 교수, 시간을 적어주세요. </label> -->
-      <input class = "form-control" id = "message_text2" type="text" name="name2" placeholder="자신이 가지고 있는 과목의 이름과 교수, 시간을 적어주세요. " autocomplete="off"></input>
+      <input class = "form-control" id = "message_text2" type="text" name="name2" placeholder="자신이 가지고 있는 교재의 이름과 교수, 시간을 적어주세요. " autocomplete="off"></input>
 </div>
 <div class = "modal-request-footer">
   <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="request_close_btn"> 취소 </button>
