--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -10,7 +10,7 @@
        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
        <script src="/javascripts/ft_main.js"></script>
   </head>
-  <body ondragstart="return false">
+  <body ondragstart="return false" stryle = "background-color : red;">
     <div id="wrapper">
 
 <!--
