--- a/views/ft_mailbox.ejs
+++ b/views/ft_mailbox.ejs
@@ -4,8 +4,8 @@
   </button>
 
   <div class="tab">
-    <button class="tablinks" onclick="mailbox(event, 'recv_mail')">받은쪽지함</button>
-    <button class="tablinks" onclick="mailbox(event, 'send_mail')">보낸쪽지함</button>
+    <button class="tablinks" onclick="mailbox(event, 'recv_mail')"><span style="font-weight:bold;">받은쪽지함</span></button>
+    <button class="tablinks" onclick="mailbox(event, 'send_mail')"><span style="font-weight:bold;">보낸쪽지함</span></button>
   </div>
 
 </div>
