--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,131 +1,22 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-
-#wrapper
-{
-  width : 1020px;
-  margin : 0 auto;
-}
-#first_area
-{
-  width : 1020px;
-  height : 170px;
-
-  display: inline-flex;
-}
-#div_logo
-{
-  height : 150px;
-
-  width : 300px;
-  padding : 10px;
-}
-#z{
-  width: 420px;
-
-  height: 170px;
-}
+body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;}
+a{color: #00B7FF;}
+#wrapper{width:1020px;margin:0 auto;}
+#first_area{width:1020px;height:170px;display:inline-flex;}
+#div_logo{height:150px;width:300px;padding:10px;}
+#z{width:420px;height:170px;}
 #logo
-{
-  font-size: 50px;
-  font-family: "NanumBarunGothic";
-  color: rgb(58, 74, 88);
-  cursor: pointer;
-  margin-top: 80px;
-}
-#div_login
-{
-  height : 170px;
-  width : 300px;
-}
-
+{font-size: 50px;font-family:"NanumBarunGothic";color:rgb(58,74,88);cursor:pointer;margin-top:80px;}
+#div_login{height:170px;width:300px;}
 #first_login
-{
-  font-size:15px;
-  float:right;
-  margin-left: 30px;
-  padding:1px;
-  margin-top:10px;
-  cursor: pointer;
-}
-.login_mention
-{
-  float:right;
-  margin-top:4px;
-  margin-left: 30px;
-  padding:1px;
-  cursor: pointer;
-  font-size:15px;
-}
-.join_mention
-{
-  font-size : 15px;
-  float : right;
-  margin-left: 10px;
-  padding:1px;
-  margin-top:4px;
-  margin-right: 10px;
-  cursor: pointer;
-}
-#change
-{
-  margin-top: -15px;
-  position: absolute;
-  margin-left: -40px;
-  width : 800px;
-}
-.searchText
-{
-  width:200px;
-  background-color:#fafafa;
-  text-align:center;
-  background-position: 10px 10px;
-  background-repeat: no-repeat;
-}
-.searchText:focus
-{
-  width:350px;
-border:1px solid skyblue;
-background-color:white;
-text-align:left;
-background-position: 10px 10px;
-background-repeat: no-repeat;
-padding:4px;
-transition: width 1s;
-}
-.mypage_mention
-{
-  float:right;
-  margin-top:4px;
-  margin-left: 30px;
-  padding:1px;
-  cursor: pointer;
-  font-size:15px;
-}
-.logout_mention
-{
-  float:right;
-  margin-top:4px;
-  margin-right: 10px;
-  margin-left: 10px;
-  padding:1px;
-  font-size:15px;
-  cursor: pointer;
-}
-#MailBoxbtn
-{
-  position : absolute;
-  float : right;
-  margin-top: 10px;
-  margin-left: 70px;
-  cursor: pointer;
-}
+{font-size:15px;float:right;margin-left:30px;padding:1px;margin-top:10px;cursor: pointer;}
+.login_mention{float:right;margin-top:4px;margin-left:30px;padding:1px;cursor: pointer;font-size:15px;}
+.join_mention{font-size:15px;float:right;margin-left:10px;padding:1px;margin-top:4px;margin-right:10px;cursor:pointer;}
+#change{margin-top: -15px;position: absolute;margin-left:-40px;width:800px;}
+.searchText{width:200px;background-color:#fafafa;text-align:center;background-position: 10px 10px;background-repeat: no-repeat;}
+.searchText:focus{width:350px;border:1px solid skyblue;background-color:white;text-align:left;background-position: 10px 10px;background-repeat: no-repeat;padding:4px;transition: width 1s;}
+.mypage_mention{float:right;margin-top:4px;margin-left: 30px;padding:1px;cursor: pointer;font-size:15px;}
+.logout_mention{float:right;margin-top:4px; margin-right:10px;margin-left:10px;padding:1px;font-size:15px;cursor: pointer;}
+#MailBoxbtn{position : absolute;float : right;margin-top: 10px;margin-left: 70px;cursor: pointer;}
 #book_mark{
   position : absolute;
   margin-top: 10px;
@@ -278,19 +169,16 @@ transition: width 1s;
   font-weight: bold;
   z-index: 13;
 }
-
-#content{
-  heigth:30%;
-}
 #dialog{
   height:60%;
 }
 .control-labels{
   margin-right:70%;
 }
+/*
 .form-controls{
   width:80%;
-}
+}*/
 .area{
   margin-bottom:1%;
 }
@@ -314,8 +202,8 @@ transition: width 1s;
     margin: auto;
     padding: 27px;
     border: 1px solid #888;
-    width: 80%;
-    height:80%;
+    width: 370px;
+    height:360px;
     border-radius:5%;
 }
 
@@ -328,7 +216,7 @@ transition: width 1s;
 
 .form-group{
   text-align:center;
-  margin-bottom:7%;
+  margin-bottom:25px;
 }
 /* The Close Button */
 .close {
@@ -707,7 +595,7 @@ table.type08 td .ex_time{
   background-color: rgb(58, 74, 88);
   line-height: 1.2;
   position: absolute;
-  margin-left: 200px;
+  margin-left:9px;
   width: 70px;
   height:29px;
   z-index: 11;
@@ -725,6 +613,30 @@ table.type08 td .ex_time{
   z-index: 12;
 }
 #Okbtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  margin-left: 110px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+#ok{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  margin-left: 10px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+.Okbtn3{
   border-radius: 5px;
   font-size: 13px;
   font-family: "NanumBarunGothic";
@@ -819,10 +731,17 @@ table.type08 td .ex_time{
 .frontMention{
   margin-right: 8px;
   color: black;
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
 }
 .backMention{
   color: black;
   margin-right: 8px;
+  font-family: "NanumBarunGothic";
+}
+.nickMention{
+  color: #074F65;
+  margin-right:8px;
 }
 #send_time{
   font-size: 15px;
@@ -846,11 +765,11 @@ table.type08 td .ex_time{
 }
 .modal-request-header{
   width :100%;
-  height : 60px;
+  height : 50px;
 }
 .modal-request-body{
   width :100%;
-  height : 55px;
+  height : 45px;
 }
 .modal-request-footer{
     width :100%;
@@ -900,7 +819,7 @@ table.type08 td .ex_time{
 
 .modal-boardview-header{
   width :100%;
-  height : 110px;
+  height : 80px;
 }
 .modal-boardview-body{
   width :100%;
@@ -959,8 +878,7 @@ table.type08 td .ex_time{
   color: rgb(255, 255, 255);
   background-color : rgb(153, 153, 153);
   line-height: 1.2;
-  position: absolute;
-  margin-left: 90px;
+  margin-left: 110px;
   width: 70px;
   height:29px;
   z-index: 12;
@@ -973,12 +891,23 @@ table.type08 td .ex_time{
   color: rgb(255, 255, 255);
   background-color : rgb(153, 153, 153);
   line-height: 1.2;
+  /*margin-left: 10px;*/
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+.Closebtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
   margin-left: 10px;
   width: 70px;
   height:29px;
   z-index: 12;
 }
-
 #Closebtn2{
   border-radius: 5px;
   font-size: 13px;
@@ -1017,17 +946,16 @@ table.type08 td .ex_time{
 }
 
 #request_close_btn{
+  width: 70px;
+  height:29px;
+  margin-left : 190px;
   border-radius: 5px;
   font-size: 13px;
   font-family: "NanumBarunGothic";
   color: rgb(255, 255, 255);
   background-color : rgb(153, 153, 153);
   line-height: 1.2;
-  position: absolute;
-  width: 70px;
-  height:29px;
   z-index: 12;
-  margin-left : 280px;
 }
 
 #SendReplybtn{
@@ -1038,10 +966,10 @@ table.type08 td .ex_time{
   background-color: rgb(58, 74, 88);
   line-height: 1.2;
   position: absolute;
+  margin-left:9px;
   width: 70px;
   height:29px;
   z-index: 11;
-  margin-left : 190px;
 }
 
 #sendmailbtn{
@@ -1132,23 +1060,60 @@ table.type08 td .ex_time{
   margin-top : 13px;
   z-index: 13;
 }
-.divider {
-  height: 1px;
-  width:100%;
-  display:block; /* for use on default inline elements like span */
-  margin: 9px 0;
-  overflow: hidden;
-  background-color: #e5e5e5;
+.tc_ta{
+  margin-left:15px;
+  width:80%;
+  height:180px;
+  padding:7px;
+  border: 2px solid grey;
+  font-family:tahoma, arial, sans-serif;
 }
-input[type=text] {
-    width: 100%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
+.divider {height: 1px;width:100%;display:block;margin: 9px 0;overflow: hidden;background-color: #e5e5e5;}
+.searchtf {width: 100%;box-sizing: border-box;border: 2px solid #ccc;border-radius: 4px;font-size: 16px;background-color: white;background-image: url('searchicon.png');background-position: 10px 10px;background-repeat: no-repeat;padding: 12px 20px 12px 40px;}
+.exchangeTf{
+  position:relative;
+  margin-left:90px;
+  border:none;
+  border-bottom: 2px solid grey;
+  font-family:tahoma, arial, sans-serif;
+}
+.exchangelabel{
+  position: absolute;
+  margin-right:10px;
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  z-index: 3;
+}
+.tf{
+  /*position:absolute;*/
+  margin-left:5px;
+  width:70%;
+  border:none;
+  border-bottom: 2px solid grey;
+  font-family:tahoma, arial, sans-serif;
+}
+.ta{
+  /*position: absolute;*/
+  margin-left:5px;
+  width:270px;
+  height:180px;
+  padding:7px;
+  border: 2px solid grey;
+  font-family:tahoma, arial, sans-serif;
+}
+.modal-post-header{
+width:100%;
+height:10px;
+}
+.modal-post-body{
+width:100%;
+height:300px;
+}
+.modal-post-footer{
+  width:100%;
+  height:40px;
+  text-align: center;
 }
