--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -8,17 +8,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src = "/javascripts/ft_mypage.js"></script>
     <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/><script></script>
-    </head>
+  </head>
   <body ondragstart="return false">
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-              <img src="/images/로고b.png" id="logo"></img>
+            <img src="/images/로고b.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
         <div id="div_login">
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">LOGOUT</a></p>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;color: #00B7FF;">LOGOUT</a></p>
           <%
           if(mailflag.length == 0){
             %>
