--- a/views/ft_join1.ejs
+++ b/views/ft_join1.ejs
@@ -20,9 +20,9 @@
         </div>
         <div id="div_login">
           <% if(!session) { %>
-          <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">LOGIN</a></p>
+          <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none; color: #00B7FF;" >JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none; color: #00B7FF;">LOGIN</a></p>
           <% } else  {%>
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">LOGOUT</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none; color: #00B7FF;">LOGOUT</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
           <% } %>
 
 
