--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -7,7 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src = "/javascripts/ft_mypage.js"></script>
-    <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/><script></script>
+    <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/></link>
+    <link rel = 'stylesheet' href='/stylesheets/main.css'/></link>
     </head>
   <body ondragstart="return false">
     <div id="wrapper">
