--- a/views/ft_acceptModal.ejs
+++ b/views/ft_acceptModal.ejs
@@ -1,23 +1,14 @@
-<div class = "modal-header">
-  <button type = "button" class = "close" data-dismiss="modal" aria-label = "Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <h4 class = "modal-title" id = "ReplyModalLabel"> 신청수락 </h4>
+<div class = "modal-accept-header">
+     <span class="frontMention">받는사람</span> <label id="recipientname32" class="control-label"><%=rows[0].app_name%></label>
 </div>
-<div class= "modal-body">
-  <form>
-    <div class = "form-group">
-       Recipient : <label id="recipientname" class="control-label"><%=rows[0].app_name%></label>
-    </div>
-    <div class = "form-group">
-      <label for="message-text" class="control-label"> Message : </label>
-      <textarea class= "form-control" id="message_text"></textarea>
-    </div>
-  </form>
+<div class="divider"></div>
+<div class= "modal-accept-body">
+    <textarea class= "form-control" id="message_text"></textarea>
 </div>
-<div class = "modal-footer">
-  <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="SendClosebtn"> Close </button>
-  <button type = "button" id = "Acceptbtn" class = "btn btn-primary"> 수락 </button>
+<div class="divider"></div>
+<div class = "modal-accept-footer">
+  <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="SendClosebtn22"> 닫기 </button>
+  <button type = "button" id = "Acceptbtn" class = "btn btn-primary"> 확인 </button>
 </div>
 
 
