--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -609,6 +609,7 @@ table.type08 td .ex_time{
   color: rgb(255, 255, 255);
   background-color: rgb(58, 74, 88);
   line-height: 1.2;
+  margin-top: 190px;
   margin-left: 10px;
   width: 70px;
   height:29px;
