--- a/views/ft_title_content.ejs
+++ b/views/ft_title_content.ejs
@@ -13,7 +13,7 @@
     </div>
     <div class = "modal-boardview-footer">
       <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="Closebtn2"> 닫기 </button>
-      <button type = "button"  href = "/first_test/boardsendmail/<%=rows[0].id%>" id="sendmailbtn" data-toggle="modal" data-target="#board_send_mail_modal<%=rows[0].id%>" class= "btn btn-primary"> 쪽지보내기 </button>
+      <button type = "button"  href = "/first_test/boardsendmail/<%=rows[0].id%>" id="sendmailbtn" data-toggle="modal" data-target="#board_send_mail_modal<%=rows[0].id%>" class= "btn btn-primary" style="width:100px;"> 쪽지보내기 </button>
     </div>
 
     <div class = "modal" id= "board_send_mail_modal<%=rows[0].id%>" tabindex="-1" data-focus-on="input:first">
