--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -428,7 +428,7 @@
                     <div class= "modal-body">
                       <form>
                         <div class = "form-group">
-                          <label for="class-name" class="exchangelabel">구하는 도서명</label>
+                          <label for="class-name" class="exchangelabel">찾는 도서명</label>
                           <input type = "text" class = "exchangeTf"id = "class_name">
                         </div>
                         <div class = "form-group">
