--- a/public/stylesheets/new_mypage.css
+++ b/public/stylesheets/new_mypage.css
@@ -30,13 +30,13 @@
   cursor: pointer;
   margin-top: 80px;
 }
-#MailBoxbtn1
+/*#MailBoxbtn1
 {
   position : absolute;
   margin-top: 5px;
   margin-left: 150px;
   cursor:pointer;
-}
+}*/
 #div_login1
 {
   height : 170px;
