--- a/views/ft_join3.ejs
+++ b/views/ft_join3.ejs
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div id="main_area_second">
-          <p id="ok_mention">가입이 완료되었습니다!</p>
+          <img src="/images/가입이완료되었습니다.PNG" id="successjoin"></img>
           <input type="button" value="확인" id="ok_button">
         </div>
       </div>
