--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -7,7 +7,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel = 'stylesheet' href='/stylesheets/new_leave1.css'/>
+      <link rel = 'stylesheet' href='/stylesheets/update1.css'/>
         <script src = "/javascripts/ft_updateinfo.js"></script>
         <script type="text/javascript"></script>
   </head>
@@ -28,7 +28,7 @@
         </div>
         <div id="div_login">
        <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none; color: #00B7FF;">LOGOUT</a></p>
-       <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none; color: #00B7FF;">mypage</a></p>
+       <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none; color: #00B7FF;">MYPAGE</a></p>
        <img id="MailBoxbtn" src="/images/자산 3.png"></img>
                <div class = "modal" id= "MailBoxModal" style="display:none;" >
                <div class = "modal-dialog">
