--- a/views/ft_leave1.ejs
+++ b/views/ft_leave1.ejs
@@ -5,7 +5,7 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
     <title>leave1_page</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <link rel = 'stylesheet' href='/stylesheets/new_leave1.css'/>
+      <link rel = 'stylesheet' href='/stylesheets/new_leave11.css'/>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src = "/javascripts/ft_leave.js"></script>
         <script type="text/javascript"></script>
