--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src = "/javascripts/ft_mypage.js"></script>
     <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/></link>
-    <link rel = 'stylesheet' href='/stylesheets/main.css'/></link>
+    <link rel = 'stylesheet' href='/stylesheets/mypage_first.css'/></link>
 
     </head>
   <body ondragstart="return false">
