--- a/public/stylesheets/new_mypage.css
+++ b/public/stylesheets/new_mypage.css
@@ -4,10 +4,11 @@
   height : 950px;
   margin : 0 auto;
 }
-#first_areaa
+#first_area
 {
   width : 1020px;
   height : 170px;
+
   display: inline-flex;
 }
 #div_logo
@@ -30,16 +31,17 @@
   cursor: pointer;
   margin-top: 80px;
 }
-/*#MailBoxbtn1
+#MailBoxbtn
 {
   position : absolute;
-  margin-top: 5px;
+  margin-top: 20px;
   margin-left: 150px;
   cursor:pointer;
-}*/
-#div_login1
+}
+#div_login
 {
   height : 170px;
+
   width : 300px;
 }
 
@@ -58,7 +60,7 @@
   float : right;
   margin-left: 30px;
   padding:1px;
-  margin-top:5px;
+  margin-top:20px;
   margin-right: 10px;
   cursor: pointer;
 }
@@ -164,7 +166,7 @@ position: absolute;
 margin-top : 200px;
 z-index: 11;
 }
-#rectangle_21
+#rectangle_2
 {
   background-color: rgb(128, 175, 181);
 position: absolute;
@@ -277,7 +279,7 @@ z-index: 19;
   top : 200px;
   z-index: 14;
 }
-#change1
+#change
 {
   font-size: 16px;
 font-family: "NanumBarunGothic";
@@ -794,14 +796,14 @@ table.mailtable tbody td {
   z-index: 12;
 }
 
-#RecvBoxClosebtn{
+#RecvBoxClosebtn22{
   border-radius: 5px;
   font-size: 13px;
   font-family: "NanumBarunGothic";
   color: rgb(255, 255, 255);
   background-color : rgb(153, 153, 153);
   line-height: 1.2;
-  margin-left: 290px;
+  margin-left: 310px;
   width: 70px;
   height:29px;
   z-index: 12;
@@ -853,4 +855,21 @@ table.mailtable tbody td {
 .modal-accept-footer{
   width:100%;
   height:36px;
+}
+.modal-showpost-body{
+  width:100%;
+  height:70px;
+}
+.modal-showpost-footer{
+  width:100%;
+  height:30px;
+}
+#modal-showpost-content{
+  background-color: #fefefe;
+margin: auto;
+padding: 12px;
+border: 1px solid #888;
+width:720px;
+height: 100px;
+border-radius: 5%;
 }
