--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -8,23 +8,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src = "/javascripts/ft_mypage.js"></script>
     <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/></link>
-    <link rel = 'stylesheet' href='/stylesheets/mypage_first.css'/></link>
-
+    <link rel = 'stylesheet' href='/stylesheets/main.css'/></link>
     </head>
   <body ondragstart="return false">
     <div id="wrapper">
-      <div id="first_areaa">
+      <div id="first_area">
         <div id="div_logo">
             <img src="/images/로고b.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
-        <div id="div_login1">
+        <div id="div_login">
           <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;color: #00B7FF;">LOGOUT</a></p>
           <%
           if(mailflag.length == 0){
             %>
-            <img id="MailBoxbtn1" src="/images/자산 3.png"></img>
+            <img id="MailBoxbtn" src="/images/자산 3.png"></img>
             <%
           }else{
             for( var i = 0 ; i < mailflag.length; i ++){
@@ -60,7 +59,7 @@
     </div>
             <div style="margin-top : -150px;">
               <p id="mypage_logo">MY<br>PAGE</p>
-              <div id="rectangle_21">
+              <div id="rectangle_2">
               </div>
 
                <div id="rectangle_5">
@@ -84,8 +83,8 @@
                         <%=oneItem.phoneopen%>
                       </p>
 
-                      <p id="change1"><a href = '/first_test/updatebefore' style="text-decoration:none; color : black">수정 </a></p>
-                      <p id="leave"><a href ='/first_test/leave1' style="text-decoration:none; color : black">탈퇴</a></p>
+                      <p id="change"><a href = '/first_test/updatebefore' style="text-decoration:none;">수정 </a></p>
+                      <p id="leave"><a href ='/first_test/leave1' style="text-decoration:none;">탈퇴</a></p>
                     </div>
                     <div id="rectangle_2_1">
                     </div>
@@ -285,7 +284,7 @@
                                           %>
                                                          <div class = "modal" id= "Show_post_Modal<%=oneItem.id%>" style="display:none;">
                                                          <div class = "modal-dialog">
-                                                           <div class = "modal-content" style="z-index : 33;">
+                                                           <div class = "modal-content" id="modal-showpost-content" style="z-index : 33;">
                                                              <!-- remote ajax call이 되는영역 -->
                                                            </div>
                                                            </div>
