--- a/views/ft_showpost.ejs
+++ b/views/ft_showpost.ejs
@@ -1,10 +1,6 @@
 <div class = "modal-header">
-  <button type = "button" class = "close" data-dismiss="modal" aria-label = "Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-
 </div>
-  <div class= "modal-body">
+  <div class= "modal-showpost-body">
     <table class ="type08">
       <thead>
         <tr>
@@ -35,6 +31,6 @@
       </table>
 
 </div>
-<div class = "modal-footer">
-  <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="RecvBoxClosebtn"> Close </button>
+<div class = "modal-showpost-footer">
+  <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="RecvBoxClosebtn22"> 닫기 </button>
 </div>
